correcting spacing and size for select manufacturer section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -36,19 +36,19 @@ main {
 
 }
 
-.select-medicine-button-container {
+.select-manufacturer-section {
     width: 100%;
     height: 10vh;
 
-    flex-basis: 15%;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    margin-bottom: 1rem;
-
-    background-color: antiquewhite;
+    gap: var(--spacing-small);
+    background-color: brown;
+ 
 }
+
 
 .render-medicine-container {
     display: flex;
